1999-11-02 Elliot
	* Make a changelog entry because I have to.

1999-10-30    <jrb@redhat.com>

	* DESIGN: Added as per andersca's request.

1999-10-30  Michael Meeks  <mmeeks@gnu.org>

	* configure.in: Update bonobo check.
