@@ -1,3 +1,8 @@
+1999-11-02  Elliot Lee  <sopwith@redhat.com>
+
+	* src/htmlimage.c: Fix computation of clipping coordinates.
+	* src/htmlpainter.c: Unset the clipping region after drawing a pixmap.
+
 1999-11-02 Elliot
 	* Make a changelog entry because I have to.
 
